fixed pricing and index buttons missing on mobile :pencil:

--- a/styles/style.css
+++ b/styles/style.css
@@ -854,7 +854,6 @@ button#hidme {
   }
   .row h3 {
     line-height: 0px;
-    font-size: small !important;
   }
   .row h1 {
     line-height: 0px;
